Implement Network API